--- a/javautil/pom.xml
+++ b/javautil/pom.xml
@@ -13,5 +13,11 @@
 		    <artifactId>fastdfs_client</artifactId>
 		    <version>1.2.0</version>
 		</dependency>
+		<!-- httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.5</version>
+		</dependency>
   </dependencies>
 </project>
