--- a/javademo/pom.xml
+++ b/javademo/pom.xml
@@ -20,5 +20,12 @@
 		    <artifactId>fastdfs_client</artifactId>
 		    <version>1.2.0</version>
 		</dependency>
+		<!-- redis客户端 -->
+		<dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+		
 	</dependencies>
 </project>
