--- a/shiroweb/pom.xml
+++ b/shiroweb/pom.xml
@@ -188,6 +188,12 @@
 			<version>${shiro.version}</version>
 		</dependency>
 		<dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>1.2.2</version>
+         </dependency>
+		
+		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
 			<version>${shiro.version}</version>
