--- a/shiroweb/src/main/webapp/WEB-INF/web.xml
+++ b/shiroweb/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,7 @@
         <param-value>
         	<!-- 可配置多个，用逗号隔开  也可以在applicationContext的配置里用import引入多个配置文件-->
         	classpath:applicationContext.xml
+        	
         </param-value>  
     </context-param>
     <!-- Spring监听器 -->  
@@ -40,7 +41,7 @@
     </listener>  
     
      <!-- shiro -->
-   <!--   <filter>
+     <filter>
          <filter-name>shiroFilter</filter-name>
          <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
          <init-param>
@@ -51,7 +52,7 @@
      <filter-mapping>
          <filter-name>shiroFilter</filter-name>
          <url-pattern>/*</url-pattern>
-     </filter-mapping> -->
+     </filter-mapping>
     
     
     <!-- Spring MVC servlet -->  
