--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   	<module>shiroweb</module>
   	<module>httpclient</module>
   	<module>serverpush</module>
+  	<module>springmvc</module>
   </modules>
   
   	<build>
