--- a/javademo/pom.xml
+++ b/javademo/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>jedis</artifactId>
             <version>2.7.2</version>
         </dependency>
-		
+		<!-- cglib -->
+		<dependency>
+		    <groupId>cglib</groupId>
+		    <artifactId>cglib</artifactId>
+		    <version>2.2.2</version>
+		</dependency>
 	</dependencies>
 </project>
