--- a/javautil/pom.xml
+++ b/javautil/pom.xml
@@ -13,6 +13,11 @@
 		    <artifactId>fastdfs_client</artifactId>
 		    <version>1.2.0</version>
 		</dependency>
+		<!-- <dependency>
+		    <groupId>com.github.tobato</groupId>
+		    <artifactId>fastdfs-client</artifactId>
+		    <version>1.25.4-RELEASE</version>
+		</dependency> -->
 		<!-- httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
