--- a/javademo/pom.xml
+++ b/javademo/pom.xml
@@ -32,5 +32,10 @@
 		    <artifactId>cglib</artifactId>
 		    <version>2.2.2</version>
 		</dependency>
-	</dependencies>
+        <!--<dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
+        </dependency>-->
+    </dependencies>
 </project>
