--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,38 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.howard</groupId>
-  <artifactId>mydemo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <description>record some demo in my study process</description>
-  <modules>
-  	<module>algorithm</module>
-  	<module>ssm</module>
-  	<module>javautil</module>
-  	<module>javademo</module>
-  	<module>quartz</module>
-  	<module>shiroweb</module>
-  	<module>httpclient</module>
-  	<module>serverpush</module>
-  	<module>springmvc</module>
-  </modules>
-  
-  	<build>
-		<finalName>${project.artifactId}</finalName>
-		<plugins>
-			<!-- java编译插件 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.howard</groupId>
+    <artifactId>mydemo</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <description>record some demo in my study process</description>
+    <modules>
+        <module>algorithm</module>
+        <module>ssm</module>
+        <module>javautil</module>
+        <module>javademo</module>
+        <module>quartz</module>
+        <module>shiroweb</module>
+        <module>httpclient</module>
+        <module>serverpush</module>
+        <module>springmvc</module>
+        <module>java8</module>
+    </modules>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <!-- java编译插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
