--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>springmvc</module>
         <module>java8</module>
         <module>rabbitmq</module>
+        <module>zookeeper</module>
     </modules>
 
     <build>
