--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,16 @@
         <module>java8</module>
         <module>rabbitmq</module>
         <module>zookeeper</module>
+        <module>hadoop</module>
+        <module>dubbo-demo</module>
     </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+    </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
