--- a/hadoop/pom.xml
+++ b/hadoop/pom.xml
@@ -42,7 +42,18 @@
             <artifactId>hadoop-mapreduce-client-app</artifactId>
             <version>2.7.2</version>
         </dependency>-->
+        <!--hive-->
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>0.13.1</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>0.13.1</version>
+        </dependency>
     </dependencies>
 
 
