--- a/hadoop/pom.xml
+++ b/hadoop/pom.xml
@@ -54,6 +54,17 @@
             <artifactId>hive-exec</artifactId>
             <version>0.13.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>0.98.6-hadoop2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>0.98.6-hadoop2</version>
+        </dependency>
     </dependencies>
 
 
